# ts_shared_py3

./: README.md  pyproject.toml  requirements.txt
src/: main_validate.py
src/ts_shared_py3/: __init__.py  constants.py
src/ts_shared_py3/api_data_classes/: admin.py  base.py  behavior.py  chatPushCloud.py  communication.py  community.py  dialog.py  iapReceipt.py  messageTypes.py  mock.py  person.py  queue_messages.py  scoring.py  stats.py  tracking.py  user.py  values.py
src/ts_shared_py3/config/: all.py  env_vars.py  load_path.py
src/ts_shared_py3/enums/: accountType.py  activityType.py  alloc.py  auth_provider.py  commitLevel.py  createAndMonitor.py  firdb_node_path.py  keyType.py  pushNotifyType.py  queued_work.py  redFlag.py  remind_freq.py  scoreRuleType.py  scoreScope.py  sex.py  voteType.py
src/ts_shared_py3/models/: appdata.py  baseNdb_model.py  beh_entry.py  beh_global.py  behavior.py  behavior_model.py  commit_stats.py  communication.py  gmcdata.py  incident.py  input_entry_adapter.py  interval.py  keyword_search.py  person.py  person_activity.py  person_keys.py  red_flag.py  score_history.py  subscription.py  tracking.py  user.py  user_app_settings.py  user_interaction.py  user_webapp.py  values_beh_cat.py
src/ts_shared_py3/queued/: stats.py
src/ts_shared_py3/schemas/: base.py  behavior.py  niu_testing.py  scoring.py  tracking.py
src/ts_shared_py3/scoring/: commBehImpactConsenus.py  commitLevel.py  score_dispatch.py
src/ts_shared_py3/services/: taskq_dispatch.py  taskq_setup.py
src/ts_shared_py3/type_conversion/: behavior.py  user.py
src/ts_shared_py3/utils/: chat_twillio.py  convert_behavior_xls.py  data_gen.py  date_conv.py  ios_devices.py  logging_ctrl.py  niu_decorators.py  niu_test_data_manager.py  queryable.py  singleton.py  stop_words.py
src/ts_shared_py3/wrappers/: behavior.py
(+77 files in other folders)
