[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_shared_py3"
version = "0.0.5"
authors = [
  { name="Dewey Gaedcke", email="dewey@pathoz.com" },
]
description = "Shared components for TS backend"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Pathoz-LLC/ts_shared_py3"
"Bug Tracker" = "https://github.com/Pathoz-LLC/ts_shared_py3/issues"