[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_shared_py3"
version = "0.0.23"
authors = [
  { name="Dewey Gaedcke", email="dewey@pathoz.com" },
]
description = "Shared components for TS backend"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Pathoz-LLC/ts_shared_py3"
"Bug Tracker" = "https://github.com/Pathoz-LLC/ts_shared_py3/issues"

[tool.setuptools]
packages = ["ts_shared_py3", "ts_shared_py3.api_data_classes", "ts_shared_py3.config", "ts_shared_py3.enums", "ts_shared_py3.models", "ts_shared_py3.schemas", "ts_shared_py3.scoring", "ts_shared_py3.services", "ts_shared_py3.utils", "ts_shared_py3.wrappers", "ts_shared_py3.config.behavior", "ts_shared_py3.config.scoring", "ts_shared_py3.config.test", "ts_shared_py3.services.firebase", "ts_shared_py3.services.ndb", "ts_shared_py3.services.push_notify"]
package-dir = {ts_shared_py3='src/ts_shared_py3'}